# itc-desolators-api

./: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
.github/workflows/: docker.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: classification.py  health.py  items.py  nlp.py
app/core/: config.py  dependencies.py
app/schemas/: classification.py  health.py  item.py  nlp.py
app/services/: classification.py  item.py  nlp.py
models/: plant_encoder.pkl  plant_metrics.json
tests/: test_items.py
